# send-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
apps/flutter_app/: README.md  pubspec.yaml
apps/flutter_app/lib/: main.dart
apps/flutter_app/lib/src/screens/: chat_screen.dart  devices_screen.dart  settings_screen.dart  transfers_screen.dart
apps/flutter_app/lib/src/services/: native_bridge.dart
apps/flutter_app/test/: widget_test.dart
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs  protocol.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/signaling-client/: Cargo.toml
crates/signaling-client/src/: lib.rs
crates/signaling-server/: Cargo.toml
crates/signaling-server/src/: main.rs
crates/transfer/: Cargo.toml
crates/transfer/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
docs/: SIGNALING_PROTOCOL.md
test/: README.md
