[workspace]
members = [
  "crates/core",
  "crates/discovery",
  "crates/transport",
  "crates/transfer",
  "crates/chat",
  "crates/security",
  "crates/signaling-client",
  "crates/signaling-server",
  "crates/ffi",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["send-rs"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
once_cell = "1.20"
quinn = "0.11"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "net", "sync", "time", "fs"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
walkdir = "2.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
