[package]
name = "sendrs-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sendrs-core = { path = "../core" }
